# projeto-python

./: .gitignore  README.md  Untitled.ipynb  novo teste.py  pyproject.toml  run_all.bat  run_all.ps1  run_jupyter.bat  run_jupyter.ps1  run_pipeline.bat  run_pipeline.ps1
Comandos/: git_push.ps1  run_all.ps1  run_study.ps1
config/: study_config.yaml  variables_map.csv
data/processed/: base_estudo_processada.csv
src/projeto_python/: config.py  main.py  paths.py  pipeline.py  plotting.py  preprocessing.py  stats.py  test_preprocessing.py
