[tool.poetry]
name = "projeto-python"
version = "0.1.0"
description = "Template para análise de dados, estatística e outputs reprodutíveis."
authors = ["Seu Nome <seuemail@exemplo.com>"]
readme = "README.md"
packages = [{ include = "projeto_python", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.0"
numpy = "^2.3.0"
matplotlib = "^3.10.0"
jupyterlab = "^4.0.0"
ipykernel = "^6.0.0"
scipy = "^1.16.0"
statsmodels = "^0.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"